catching up to master

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,9 @@
 #Mac Inserted Files
 *.DS_Store
 
-#Config File
+#Config Files
 main/Config.xml
+*.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
